--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "python-curriculum-react",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://ethan-arrowood.github.io/fcc-python-react-app/",
   "devDependencies": {
+    "gh-pages": "^1.0.0",
     "react-scripts": "1.0.7"
   },
   "dependencies": {
@@ -15,6 +17,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   }
 }
